# nsu-esp32c6-server

./: sdkconfig  sdkconfig.defaults
components/led_ctrl/: CMakeLists.txt
components/led_ctrl/include/: led_ctrl.h
components/led_ctrl/src/: led_ctrl.c
components/main/: CMakeLists.txt
components/main/include/: app_main.h
components/main/src/: app_main.c
components/transport/: CMakeLists.txt  Kconfig
components/transport/include/: transport.h
components/transport/src/: transport_ble.c  transport_espnow.c  transport_wifi.c
main/: CMakeLists.txt  idf_component.yml  main.c
